--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,22 +4,34 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">                      <!--_method cuz thats the string used while requiring method override-->
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method='POST'>
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method='POST' novalidate class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>                          <!--below 'value' to pre-populate the forms-->
-                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title%>">
+                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title%>" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                      </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>                   <!--groups all info under req.body under campground obj-->
-                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>">
+                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                      </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground.image%>">
+                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground.image%>" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                      </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]" <%= campground.description %>></textarea><!--no vale attribute on textarea-->
+                    <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea><!--no vale attribute on textarea-->
+                    <div class="valid-feedback">
+                        Looks good!
+                      </div>
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Campground Price</label>
