--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,28 +5,40 @@
 <div class="row">
     <h1 class="text-center">Add Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method='POST'>
+        <form action="/campgrounds" method='POST' novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]"><!--groups all info under req.body under campground obj-->
+                <input class="form-control" type="text" id="title" name="campground[title]" required><!--groups all info under req.body under campground obj-->
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]">
+                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                  </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input class="form-control" type="text" id="image" name="campground[image]">
+                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                  </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+                <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                  </div>
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Campground price</label>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="price-label">$</span>
-                <input type="text" class="form-control" id="price" aria-label="price" name="campground[price]">
+                <input type="text" class="form-control" id="price" aria-label="price" name="campground[price]" required>
                 <span class="input-group-text">.00</span>
               </div>
             </div>
@@ -37,6 +49,7 @@
         <a href="/campgrounds">Get Back To Camping</a>
     </div>
 </div>
+
 
 
     
