--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -20,10 +20,6 @@
                       </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" for="image">Add Images</label>
-                    <input type="file" name="image" id="image" multiple>
-                </div>
-                <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea><!--no vale attribute on textarea-->
                     <div class="valid-feedback">
@@ -38,6 +34,10 @@
                     <span class="input-group-text">.00</span>
                   </div>
                 </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Add more image(s)</label>
+                    <input class="form-control" type="file" id="formFileMultiple" name="image" multiple>
+                  </div>
                 <div class="mb-3">
                 <BUTTON class="btn btn-info">Update Campground</BUTTON>
             </div>
