--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,10 +12,15 @@
         <a href="/campgrounds/new">Add Campground</a>
     </div>
         <% for(let campground of campgrounds) {%>
-        <div class="card" mb-3>
+        <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="<%= campground.images[0].url %>" alt="" class="img-fluid">
+                    <% if (campground.images && campground.images.length > 0 && campground.images[0].url) { %>
+                        <img src="<%= campground.images[0].url %>" alt="" class="img-fluid">
+                    <% } else { %>
+                        <img src="default_image_url_here" alt="Default Image" class="img-fluid">
+                    <% } %>
+                    
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
